--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nine Men's Morris - Digital Board Game</title>
-    <meta name="description" content="Play Nine Men's Morris online - a classic strategy board game with AI and multiplayer modes">
+    <title>Historical Board Games - Play Classic Strategy Games Online</title>
+    <meta name="description" content="Play historical board games online - Nine Men's Morris and more classic strategy games with AI and multiplayer modes">
     <link rel="stylesheet" href="/src/styles/main.css">
 </head>
 <body>
